syntax = "proto3";

package ticket;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

option go_package = "./grpc/ticket";

// Ticket definition
message Ticket {
  string id = 1;
  string title = 2;
  string description = 3;
  string seller_id = 4;
  google.protobuf.Timestamp start_date = 5;
  string category_name = 6;
  string region_name = 7;
  string venue_name = 8;
  string venue_entrance_gate = 9;
  string venue_coordinate_lat = 10;
  string venue_coordinate_long = 11;
  google.protobuf.Timestamp created_at = 12;
  string created_by = 13;
  google.protobuf.Timestamp updated_at = 14;
  string updated_by = 15;
}

// TicketList definition
message TicketList {
  repeated Ticket tickets = 1;
}

// TicketService definition
service TicketService {
  rpc GetTicket(Ticket) returns (Ticket);
  rpc CreateTicket(Ticket) returns (Ticket);
  rpc UpdateTicket(Ticket) returns (Ticket);
  rpc DeleteTicket(Ticket) returns (google.protobuf.Empty);
  rpc GetTickets(google.protobuf.Empty) returns (TicketList);
}
